<resources>
    <string name="app_name" translatable="false">Tap payment task</string>
    <string name="type_amount_hint">Type the amount here</string>
    <string name="pay">Pay %s %s</string>
    <string name="start_done">done</string>
    <string name="title_">Payment For \n<b><font size="20">Merchant Testing</font></b></string>
    <string name="select_title">Select</string>
    <string name="enter_card_title">Or Enter Card</string>
    <string name="we_accept_title">We Accept</string>
    <string name="powered_by_title">Powered By Tap Payment</string>
    <string name="edit">Edit</string>
    <string name="card_number_title">Card Number</string>
    <string name="mm_yy_title">MM/YY</string>
    <string name="cvv_title">CVV</string>
    <string name="settings_title">Settings</string>
    <string name="options">Options</string>
    <string name="checkout_sdk_title">Checkout SDK</string>
    <string name="currency">K.D</string>
    <string name="amount_text">%s %s</string>
    <string name="item_number_title">1 ITEM | K.D</string>
</resources>