<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/tap_payment_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_payment_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/title_"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/tv_payment_for"
        />

    <View
        android:id="@+id/view"
        style="@style/viewStyle"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_for" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="KD 100000"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view2"
        style="@style/viewStyle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_amount" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white_gray"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
        <TextView
            style="@style/AppSmallTextStyle"
            android:layout_weight="1"
            android:text="@string/select_title" />

            <TextView
                style="@style/AppSmallTextStyle"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/edit" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rv_payments_type"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3" />

        <TextView
            style="@style/AppSmallTextStyle"
            android:text="@string/enter_card_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
        <TextView
            style="@style/AppSmallTextStyle"
            android:text="@string/we_accept_title" />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visa_logo"
                android:layout_marginHorizontal="@dimen/_10sdp"
                />
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"

                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/master_card_logo"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/AppButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pay KD 10000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/powered_by_title" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>