<androidx.cardview.widget.CardView android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_1sdp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="3">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:background="@null"
            android:drawableStart="@drawable/credit_card"
            android:drawablePadding="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:hint="@string/card_number_title"
            android:inputType="number"
            android:maxLength="14"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@null"
            android:gravity="end"
            android:id="@+id/ed_expiry"
            android:hint="@string/mm_yy_title"
            android:inputType="number"
            android:digits="123456789/"
            android:maxLength="5"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableEnd="@drawable/scan_icon"
            android:gravity="center"
            android:hint="@string/cvv_title"
            android:inputType="number"
            android:maxEms="3"
            android:maxLength="3"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
